# BaumanRacing

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
client/: CMakeLists.txt  Client
client/linters/: run.sh
client/source/: main.cpp  main_test_external.cpp  main_test_internal.cpp
client/source/Application/: application.cpp  application.hpp  application_tests.cpp
client/source/Base_builder/: base_builder.cpp  base_builder.hpp
client/source/Base_manager/: base_manager.cpp  base_manager.hpp
client/source/Base_module/: base_module.cpp  base_module.hpp
client/source/Event/: event.cpp  event.hpp
client/source/Event_manager/: event_manager.cpp  event_manager.hpp  event_manager_tests.cpp
client/source/Event_throwable/: event_throwable.hpp
client/source/Game_builder/: game_builder.cpp  game_builder.hpp
client/source/Game_context/: game_context.cpp  game_context.hpp  game_context_abst.hpp  game_context_manager.cpp  game_context_manager.hpp  game_context_test.cpp
client/source/Input/: input.cpp  input.hpp  input_abst.hpp  input_manager.cpp  input_manager.hpp  input_test.cpp
client/source/Loader/: loader.cpp  loader.hpp  loader_abst.hpp  loader_manager.cpp  loader_manager.hpp  loader_test.cpp
client/source/Map_builder/: map_builder.cpp  map_builder.hpp
client/source/Menu_builder/: menu_builder.cpp  menu_builder.hpp
client/source/Network/: network.cpp  network.hpp  network_abst.hpp  network_manager.cpp  network_manager.hpp  network_test.cpp
client/source/Renderer/: game_render_data.hpp  renderer.cpp  renderer.hpp  renderer_abst.hpp  renderer_manager.cpp  renderer_manager.hpp  renderer_test.cpp  renderer_tests.cpp
client/source/server/: server.cpp  server.hpp
client/source/transfer_lib/config/: config.hpp  def.hpp
client/source/transfer_lib/transfer/: command.hpp  message.cpp
client/static/: map_tiles.tsx
game_manager/: game_manager.cpp  game_manager.h
logger/: logger.cpp  logger.hpp
network/: connection.cpp  connection.h  server.cpp  server.h
project/: clt.cpp  network_data.hpp  srv.cpp
server/: CMakeLists.txt
server/default_maps/: map.tmx
server/game_logic/: game_logic.h  game_logic_test.cpp  map.h
server/game_logic/tests/: test1.txt
server/game_manager/: game_manager.h  game_manager_test.cpp
server/linters/: run.sh
server/solver/: Solver.h
server/source/: start_server.cpp  test_client.cpp
server/source/game_logic/: game_logic.hpp  game_logic_test.cpp
server/source/game_manager/: game_manager.cpp  game_manager.hpp  game_manager_test.cpp  map.cpp  map.hpp
server/source/message/: message.cpp  message.hpp
server/source/server/: server.cpp  server.hpp  user.hpp  users_room.hpp
server/source/transfer_lib/config/: config.hpp  def.hpp
server/source/transfer_lib/transfer/: message.cpp  message.hpp
server/source/user/: user.cpp  user.hpp
server/source/users_room/: users_room.cpp  users_room.hpp
server_logic/: init.cpp  init.h
server_tests/: server_handler.cpp  server_network.cpp
transfer_lib/config/: config.hpp  def.hpp
transfer_lib/transfer/: command.cpp  command.hpp  message.cpp  message.hpp
